Fri Aug  7 01:55:10 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/digest/sha2/lib/sha2.rb: should require sha2.so.

Fri Aug  7 01:04:17 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb (search_tclConfig): fix logic bug.

Thu Aug  6 09:06:39 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): refine previous change.

Thu Aug  6 01:28:53 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): fix condition for making thread
	  runnable.  [ruby-core:23515]

Wed Aug  5 12:54:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_exc_raise, rb_exc_fatal): require exception object.
	  [ruby-core:24767]

Wed Aug  5 12:46:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_eval): does not restore old errinfo when fatal error.

	* eval.c (rb_longjmp): reset raised flag before fatal error.

Wed Aug  5 00:31:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parsers/parse_c.rb: fixed a small error in the
	  documentation.  [ruby-core:24744]

Tue Aug  4 22:15:27 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (has_redirection): need to execute shell if commandline
	  includes newline.  cf. [ruby-core:24560]

Tue Aug  4 03:56:51 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tcltklib.c: fix trouble on old-style C function
	  declarations [ruby-core:22871].

	* ext/tk/lib/tcltklib.c: (ruby_1_8) fix warning about RUBY_RELEASE_DATE

	* ext/tk/lib/tk/multi-tk.rb: kill zombie threads.

	* ext/tk/lib/tk/fontchooser.rb: fix typo and support OptionObj.

	* ext/tk/lib/tk/{canvas.rb,virtevent.rb,image.rb,timer.rb}:
	  don't create unnecessary array.

Mon Aug  3 17:24:30 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_connect): return value was broken when some
	  error occurred.
	  [ruby-core:24234]

Sun Aug  2 06:08:17 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* node.h (rb_thread_status): ISO C89 do not allow a comma at the end of enum.
