@@ -20,10 +20,6 @@ end
 
 have_header("sys/cdefs.h")
 
-have_header("inttypes.h")
-
-have_header("unistd.h")
-
 $preload = %w[digest]
 
 create_makefile("digest/md5")
