@@ -1,3 +1,8 @@
+Fri Aug  7 02:00:06 2009  Akinori MUSHA  <knu@iDaemons.org>
+
+	* ext/digest/*/extconf.rb: inttypes.h and unistd.h need not be
+	  checked here. [ruby-dev:39032]
+
 Fri Aug  7 01:55:10 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/digest/sha2/lib/sha2.rb: should require sha2.so.
